Added icons to left pane of header

--- a/index.html
+++ b/index.html
@@ -14,56 +14,56 @@
         <div class="container">
             <div class="header">
                 <div class="home">
-
+                    <img id="home-icon" src="./img/icons/home-color.png">
                 </div>
                 <div class="nav-bar">
                     <div class="left-pane">
                         <!-- Item 1 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/video-camera.png">
+                            <p class="header-item-text"> AIRING </p>
                         </div>
 
                         <!-- Item 2 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/completed.png ">
+                            <p class="header-item-text"> COMPLETED</p>
                         </div>
-
+                        
                         <!-- Item 3 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/video-camera.png ">
+                            <p class="header-item-text"> MOVIES </p>
                         </div>
 
                         <!-- Item 4 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/ribbon.png">
+                            <p class="header-item-text"> OVA </p>
                         </div>
 
                         <!-- Item 5 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/faq.png">
+                            <p class="header-item-text"> FAQ </p>
                         </div>
 
                         <!-- Item 6 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/request.png">
+                            <p class="header-item-text"> REQUEST </p>
                         </div>
 
                         <!-- Item 7 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/forum.png">
+                            <p class="header-item-text"> FORUM </p>
                         </div>
 
                         <!-- Item 8 -->
                         <div class="header-items">
-                            <img class="icon" src=" ">
-                            <p class="header-item-text"> </p>
+                            <img class="icon" src="./img/icons/discord.png">
+                            <p class="header-item-text"> DISCORD </p>
                         </div>
                     </div>
                     <div class="right-pane">
