Added complete styling for header

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                         <div class="follow-shuffle-brightness">
                             <!-- Follow -->
                             <div class="header-items">
-                                <img class="icon" src=" ">
-                                <p class="header-item-text"> </p>
+                                <img class="icon" id="follow" src="./img/icons/follow.png">
+                                <p class="follow-shuffle-text"> Follow </p>
                             </div>
-                            <img class="icon" src=" ">
-                            <img class="icon" src=" ">
+                            <img class="icon" src="./img/icons/shuffle.png ">
+                            <img class="icon" src="./img/icons/brightness.png ">
 
                         </div>
                         <div class="search-bar">
                             <input type="text" id="search" placeholder="Search For">
-                            <img class="icon" src=" ">
+                            <img class="icon" src="./img/icons/search.png ">
                         </div>
                     </div>
                 </div>
