--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
 
             <div class="main-body">
                 <div class="body-header">
-                    <h3> </h3>
+                    <h3> Latest Releases </h3>
                 </div>
                 <div class="movie-pane">
                     <!-- Movie 1 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/jobless-reincarnation.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
@@ -104,6 +105,7 @@
 
                     <!-- Movie 2 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/akudama-drive.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
@@ -116,6 +118,7 @@
 
                     <!-- Movie 3 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/gintama.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
@@ -128,6 +131,7 @@
 
                     <!-- Movie 4 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/witcher2.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
@@ -140,6 +144,7 @@
 
                     <!-- Movie 5 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/steins-gate.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
@@ -152,6 +157,7 @@
 
                     <!-- Movie 6 -->
                     <div class="movie">
+                        <img class="movie-preview-img" src="./img/evangelion.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> </p>
