--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                         <img class="movie-preview-img" src="./img/jobless-reincarnation.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating">8.3</p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date">September 10, 2021</p>
+                            <p class="title"> Jobless Reincarnation</p>
                         </div>
                     </div>
 
@@ -108,37 +108,37 @@
                         <img class="movie-preview-img" src="./img/akudama-drive.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating"> 7.3 </p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date"> September 7, 2021 </p>
+                            <p class="title"> Akudama Drive</p>
                         </div>
                     </div>
 
                     <!-- Movie 3 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/gintama.jpg">
-                        <button class="tag"> Anime </button>
+                        <button class="tag"> Animated </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating"> 8.8 </p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date"> August 30, 2021 </p>
+                            <p class="title"> Gintama - The Final</p>
                         </div>
                     </div>
 
                     <!-- Movie 4 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/witcher2.jpg">
-                        <button class="tag"> Anime </button>
+                        <button class="tag"> Animated </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating"> 8.2 </p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date"> August 27, 2021</p>
+                            <p class="title"> The Witcher - Nightmare of the Wolf</p>
                         </div>
                     </div>
 
@@ -147,24 +147,24 @@
                         <img class="movie-preview-img" src="./img/steins-gate.jpg">
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating"> 8.1 </p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date"> August 30, 2021</p>
+                            <p class="title"> Stein's;Gate - 23b - Open teh Missing Link </p>
                         </div>
                     </div>
 
                     <!-- Movie 6 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/evangelion.jpg">
-                        <button class="tag"> Anime </button>
+                        <button class="tag"> Animated </button>
                         <div class="rating-container">
-                            <p class="rating"> </p>
+                            <p class="rating"> 8.3</p>
                         </div>
                         <div class="release-date-title">
-                            <p class="date"> </p>
-                            <p class="title"> </p>
+                            <p class="date"> August 16, 2021</p>
+                            <p class="title"> Evangelion - 3.0+1.0 Thrice Upon a Time</p>
                         </div>
                     </div>
                 </div>
