Added gradient to preview images in page-styling.css

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     <!-- Movie 1 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/jobless-reincarnation.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating">8.3</p>
@@ -106,6 +107,7 @@
                     <!-- Movie 2 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/akudama-drive.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> 7.3 </p>
@@ -119,6 +121,7 @@
                     <!-- Movie 3 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/gintama.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Animated </button>
                         <div class="rating-container">
                             <p class="rating"> 8.8 </p>
@@ -132,6 +135,7 @@
                     <!-- Movie 4 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/witcher2.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Animated </button>
                         <div class="rating-container">
                             <p class="rating"> 8.2 </p>
@@ -145,6 +149,7 @@
                     <!-- Movie 5 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/steins-gate.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Anime </button>
                         <div class="rating-container">
                             <p class="rating"> 8.1 </p>
@@ -158,6 +163,7 @@
                     <!-- Movie 6 -->
                     <div class="movie">
                         <img class="movie-preview-img" src="./img/evangelion.jpg">
+                        <div class="gradient"></div>
                         <button class="tag"> Animated </button>
                         <div class="rating-container">
                             <p class="rating"> 8.3</p>
